--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Lilith--A-Romance_1640
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: MacDonald, George
@@ -18,6 +21,8 @@ description: "Lilith is a fantasy novel written by Scottish writer George MacDon
   \ a Christian universalist, believing that all will eventually be saved. However,\
   \ in this story, divine punishment is not taken lightly, and salvation is hard-won.\n\
   \ From Wikipedia (CC BY-SA)."
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/1640#Lilith--A-Romance
 gutenberg_issued: '1999-02-01'
 gutenberg_type: Text
 identifiers:
